2011-04-26  Dinesh K Garg  <dineshg@codeaurora.org>

Reviewed by Eric Seidel.

        Test case for: beginElement broken by setAttribute
        https://bugs.webkit.org/show_bug.cgi?id=26019

        * svg/animations/animate-beginElementAt-expected.txt: Added.
        * svg/animations/animate-beginElementAt.svg: Added.
        * svg/animations/animate-dynamic-update-attributeName-expected.txt:
        Nice side effect of the patch, we are now fully passing this test.
2011-04-26  Dinesh K Garg  <dineshg@codeaurora.org>

        Reviewed by Eric Seidel.

        beginElement broken by setAttribute
        https://bugs.webkit.org/show_bug.cgi?id=26019

        Test: svg/animations/animate-beginElementAt.svg

        * svg/SVGAnimationElement.cpp:
        (WebCore::SVGAnimationElement::attributeChanged):
        Reset the animation state here as the rest of the code reads it and would still
        think we are animating when we are not.

        * svg/animation/SVGSMILElement.h:
        (WebCore::SVGSMILElement::setInactive): Helper function to reset the state.

Canonical link: https://commits.webkit.org/74720@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84999 268f45cc-cd09-0410-ab3c-d52691b4dbfc